crossnma.model(): return list element 'small.values'

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -11,12 +11,14 @@
   pages =	 {613--629}
 }
 
-@article{verde_2020,
-  title =	 {A bias-corrected meta-analysis model for combining,
+@article{verde_2021,
+  title =	 {A bias-corrected meta-analysis model for combining
                   studies of different types and quality},
   journal =	 {Biometrical Journal},
   author =	 {Verde, Pablo Emilio},
-  year =	 {2020},
+  year =	 {2021},
+  volume =       63,
+  pages =        {406--422}
 }
 
 @report{plummer_jags,
